study/clusterip-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-deployment
spec:
  type: ClusterIP
  selector:
    app: ingress-selector
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
