study/clusterip-sales.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-sales-deployment
spec:
  type: ClusterIP
  selector:
    app: sales
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
