study/deployment-sales.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sales
  template:
    metadata:
      name: sales
      labels:
        app: sales
    spec:
      containers:
      - image: nginx
        name: sales-container
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sales-service
spec:
  type: NodePort
  ports:
  - nodePort: 30000
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: sales
