study/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ingress-selector

  template:
    metadata:
      name: sales
      labels:
        app: ingress-selector
    spec:
      containers:
      - name: sales
        image: hwlim78/web-site:sales
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ingress-selector
  name: sales
  namespace: default
spec:
  type: NodePort
  ports:
  - nodePort: 30000
    port: 80
    protocol: TCP
    targetPort: 80
