study/replication-food.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-service
spec:
  type: NodePort
  ports:
  - nodePort: 30001
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    name: food
