study/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: master1.innerinfo.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service
            port:
              number: 80
      - path: /nihao
        pathType: Prefix
        backend:
          service:
            name: cloud
            port:
              number: 80
 # ingressClassName: nginx
